--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,92 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.title {
+  color: black;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-flow: column;
+  margin-top: 40px;
+  margin-left: 40px;
+  width: 100%;
+}
+
+.expenesViewContainer {
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.box {
+  width: 180px;
+  margin: 0 50px;
+  text-align: center;
+  padding: 15px;
+  margin-top: 25px;
+  font-weight: 500;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.box-1 {
+  color: black;
+  background-color: #dcdcdc;
+height: 80px;
+  margin: 0px;
+  margin-top: 30px
+}
+
+.box-2 {
+  color: #018749;
+  background-color: #90ee90;
+}
+
+.box-3 {
+  color: #0000ff;
+  background-color: #89cff0;
+}
+
+.searchBarContainer {
+  display: flex;
+  width: 800px;
+  margin-top: 30px;
+  flex-direction: column;
+ 
+}
+
+.search{
+  margin: 15px 0;
+}
+
+
+.searchBarTxtBox{
+
+  width: 100%;
+
+}
+
+.list .item-text{
+  display: flex;
+  justify-content: space-between;
+  border:2px solid gray;
+  width: 1000px ;
+  margin:0px auto;
+  margin-top: 100px;
+  text-align: center;
+  padding: 20px;
+  
+}
+
+.name-title{
+  text-transform: capitalize;
+}
+
+.cost-title{
+  background-color: blue;
+  color:white;
+  border: 2px solid blue;
+  border-radius:20%;
+  width: 8%;
 }
